--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <!-- <span class="geo"><input type="checkbox" name="currencies" value="RUB" checked> RUB</span> -->
     <!-- <span class="geo"><input type="checkbox" name="currencies" value="TRY" checked> TRY</span> -->
     <span class="geo"><input type="checkbox" name="currencies" value="KZT" checked> KZT</span>
-    <span class="geo"><input type="checkbox" name="currencies" value="BRL" checked> BRL</span>
+    <!-- <span class="geo"><input type="checkbox" name="currencies" value="BRL" checked> BRL</span> -->
     <span class="geo"><input type="checkbox" name="currencies" value="AZN" checked> AZN</span>
     <span class="geo"><input type="checkbox" name="currencies" value="UZS" checked> UZS</span>
     <span class="geo"><input type="checkbox" name="currencies" value="INR" checked> INR</span>
@@ -309,7 +309,7 @@ function downloadCSV() {
     const selectedCurrencies = Array.from(document.querySelectorAll('input[name="currencies"]:checked')).map(el => el.value);
     
     //const allCurrencies = ["EUR", "USD", "RUB", "TRY", "KZT", "BRL", "AZN", "UZS", "INR", "PEN", "CLP", "MXN", "CAD", "BDT"];
-    const allCurrencies = ["EUR", "USD", "KZT", "BRL", "AZN", "UZS", "INR", "CLP", "MXN", "CAD", "BDT"];
+    const allCurrencies = ["EUR", "USD", "KZT", "AZN", "UZS", "INR", "CLP", "MXN", "CAD", "BDT"];
     const csvHeaders = ["Name"].concat(allCurrencies);
 
     let csvContent = "data:text/csv;charset=utf-8,";
@@ -362,7 +362,7 @@ function downloadStageCSV() {
     const selectedCurrencies = Array.from(document.querySelectorAll('input[name="currencies"]:checked')).map(el => el.value);
     
     //const allCurrencies = ["EUR", "USD", "RUB", "TRY", "KZT", "BRL", "AZN", "UZS", "INR", "PEN", "CLP", "MXN", "CAD", "BDT"];
-    const allCurrencies = ["EUR", "USD", "KZT", "BRL", "AZN", "UZS", "INR", "CLP", "MXN", "CAD", "BDT"];
+    const allCurrencies = ["EUR", "USD", "KZT", "AZN", "UZS", "INR", "CLP", "MXN", "CAD", "BDT"];
     const csvHeaders = ["Rew Users From", "Rew Users To", "Wallet/Type", "BonusID", "Text", "Reward Variable"].concat(allCurrencies);
 
     let csvContent = "data:text/csv;charset=utf-8,";
@@ -384,8 +384,10 @@ function downloadStageCSV() {
             bonusID = '1';
         } else if (bonusCasinoPositions.includes(suffix)) {
             walletType = 'Bonus Casino';
+            bonusID = '1';
         } else if (bonusSportPositions.includes(suffix)) {
             walletType = 'Bonus Sport';
+            bonusID = '1';
         }
 
         let row = `${from},${to},${walletType},${bonusID},${text},${rootVariable}${suffix}`;
