--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ function downloadStageCSV() {
                 walletType = 'Freespin';
                 bonusID = '1';
             } else if (freebetPositions.includes(suffix)) {
-                walletType = 'Freebet';
+                walletType = 'Freebets';
                 bonusID = '1';
             } else if (bonusCasinoPositions.includes(suffix)) {
                 walletType = 'Bonus Casino';
